# WrinkledTensionFields

./: .gitignore  .gitmodules  CMakeLists.txt  CoMISoWrapper.cpp  Collision.cpp  Collision.h  CommonFunctions.cpp  CommonFunctions.h  DataConversion.cpp  DataConversion.h  EigenNASOQ.cpp  EigenNASOQ.h  GeometryDerivatives.cpp  GeometryDerivatives.h  GurobiMIPWrapper.cpp  GurobiMIPWrapper.h  IntrinsicGeometry.cpp  LICENSE  MeshConnectivity.cpp  MeshGeometry.cpp  Obstacle.h  PenaltyEnergy.cpp  PenaltyEnergy.h  PressureEnergy.cpp  README.md  SecMeshParse.cpp  SecMeshParse.h  SecMeshParsing.h  ShellSolver.cpp  ShellSolver.h  Stitch.cpp  Stitch.h  Timer.h  ToDO.txt  ZuenkoFormula.cpp  ZuenkoFormula.h  findCorners.cpp  findCorners.h
Collision/: Collision.cpp  rpoly.h
ComplexLoop/: ComplexLoop.cpp  ComplexLoop.h  ComplexLoopZuenko.cpp  ComplexLoopZuenko.h
ElasticShell/: ElasticEnergy.cpp  ElasticEnergy.h  ElasticIO.cpp  ElasticIO.h  ElasticSetup.cpp  ElasticSetup.h  ElasticShellMaterial.cpp  ElasticShellMaterial.h  ElasticShellModel.cpp  ElasticShellModel.h  ElasticState.cpp  ElasticState.h  NeoHookeanMaterial.cpp  NeoHookeanMaterial.h  StVKMaterial.cpp  StVKMaterial.h  StVKTensionFieldMaterial.cpp  StVKTensionFieldMaterial.h
MIPWrapper/: CoMISoWrapper.h
MeshLib/: IntrinsicGeometry.h  MeshConnectivity.h  MeshGeometry.h
Optimization/: LineSearch.cpp  LineSearch.h  NASOQSQP.cpp  NASOQSQP.h  NewtonDescent.cpp  NewtonDescent.h  TestFunctions.cpp  TestFunctions.h
OtherEnergies/: PenaltyEnergy.cpp  PenaltyEnergy.h  PressureEnergy.cpp  PressureEnergy.h
SecondFundamentalForm/: MidedgeAngleSinFormulation.cpp  MidedgeAngleTanFormulation.cpp  MidedgeAngleTanFormulation.h  MidedgeAverageFormulation.cpp  SecondFundamentalFormDiscretization.cpp  SecondFundamentalFormDiscretization.h
Sims/disc/: disc_WTF.json  disc_cur_amplitude.txt  disc_cur_dphi.txt  disc_cur_phi.txt  disc_edgedofs_simulated.txt  disc_elastic_status.txt  disc_elastic_timing.txt  disc_reduced_status.txt  disc_reduced_timing.txt
Sims/disc_elastic/: disc_edgedofs_simulated.txt  disc_elastic.json  disc_elastic_status.txt  disc_elastic_timing.txt
SolverApp/: CMakeLists.txt
SolverApp/ElasticGui/: CMakeLists.txt  main.cpp
SolverApp/WTFGui/: CMakeLists.txt  main.cpp
TFWShell/: KnoppelStripePatternEdgeOmega.cpp  KnoppelStripePatternEdgeOmega.h  MeshUpsampling.cpp  MeshUpsampling.h  PhiEstimate.cpp  PhiEstimate.h  TFWIO.cpp  TFWIO.h  TFWModel.cpp  TFWModel.h  TFWSetup.cpp  TFWSetup.h  TFWShell.cpp  TFWShell.h  TFWState.cpp  TFWState.h
WTFShell/: MeshUpsampling.cpp  MeshUpsampling.h  PhiEstimate.cpp  PhiEstimate.h  WTFIO.cpp  WTFIO.h  WTFModel.cpp  WTFModel.h  WTFSetup.cpp  WTFSetup.h  WTFShell.cpp  WTFShell.h  WTFState.cpp  WTFState.h
apps/: CMakeLists.txt
apps/ElasticShellCli/: CMakeLists.txt  README.md  main.cpp
apps/ElasticShellGui/: CMakeLists.txt  main.cpp
apps/TFWShellCli/: CMakeLists.txt  main.cpp
apps/TFWShellGui/: CMakeLists.txt  main.cpp
cmake/: FindGUROBI.cmake  FindJSON.cmake  FindLIBIGL.cmake  FindMKL.cmake  FindNASOQ.cmake  FindSPECTRA.cmake  FindSPQR.cmake  FindSuiteSparse.cmake  FindTBB.cmake  libigl.cmake  polyscope.cmake  spectra.cmake
collisionDetectionWrapper/: Distance.h
data/TFW/disk/: disk_TFW.json  disk_amplitude_simulated.txt  disk_dphi_simulated.txt  disk_phi_simulated.txt
data/TFW/dress/: dress2_TFW.json  dress2_amplitude_simulated.txt  dress2_dphi_simulated.txt  dress2_phi_simulated.txt
data/elastic/disk/: disk_edgedofs_simulated.txt  disk_elastic.json
data/elastic/dress/: dress2_edgedofs_simulated.txt  dress2_elastic.json
